Http-client-branch: split WSDriver.java